--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -278,7 +278,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "**1.4**"
    ]
   },
   {
@@ -305,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
